fix loading of CSL styles using correct path